force-app/main/default/objects/Account/fields/Maersk_test__c.field-meta.xml
<CustomField>
    <fullName>Maersk_test__c</fullName>
    <label>Maersk test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>