force-app/main/default/objects/Account/fields/Statkraft__c.field-meta.xml
<CustomField>
    <fullName>Statkraft__c</fullName>
    <label>Statkraft</label>
    <length>25</length>
    <type>Text</type>
</CustomField>