force-app/main/default/objects/Account/fields/test2genfieldaccount__c.field-meta.xml
<CustomField>
    <fullName>test2genfieldaccount__c</fullName>
    <description>test for 2gen source format</description>
    <label>test2genfieldaccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>