force-app/main/default/objects/Account/fields/Test_1806__c.field-meta.xml
<CustomField>
    <fullName>Test_1806__c</fullName>
    <label>Test_1806</label>
    <length>255</length>
    <type>Text</type>
</CustomField>