force-app/main/default/objects/Account/fields/Test_RR_CRTQG__c.field-meta.xml
<CustomField>
    <fullName>Test_RR_CRTQG__c</fullName>
    <label>Test_RR_CRTQG1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>