force-app/main/default/objects/Account/fields/X2ndgen__c.field-meta.xml
<CustomField>
    <fullName>X2ndgen__c</fullName>
    <description>2nd gen</description>
    <label>2ndgen</label>
    <length>250</length>
    <type>Text</type>
</CustomField>